--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/1-timer.css" />
-    <link rel="stylesheet" href="https://thedigital.gov.ua/fonts" />
     <title>Timer</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css"
+    />
   </head>
   <body>
-    <a href="./index.html" class="back">Back</a>
+    <input type="text" id="datetime-picker" />
+    <button type="button" data-start disabled>Start</button>
 
-    <div class="container">
-      <input type="text" id="datetime-picker" />
-      <button type="button" class="start-btn" data-start>Start</button>
-      <div class="timer">
-        <div class="field">
-          <span class="value" data-days>00</span>
-          <span class="label">Days</span>
-        </div>
-        <div class="field">
-          <span class="value" data-hours>00</span>
-          <span class="label">Hours</span>
-        </div>
-        <div class="field">
-          <span class="value" data-minutes>00</span>
-          <span class="label">Minutes</span>
-        </div>
-        <div class="field">
-          <span class="value" data-seconds>00</span>
-          <span class="label">Seconds</span>
-        </div>
+    <div class="timer">
+      <div class="field">
+        <span class="value" data-days>00</span>
+        <span class="label">Days</span>
+      </div>
+      <div class="field">
+        <span class="value" data-hours>00</span>
+        <span class="label">Hours</span>
+      </div>
+      <div class="field">
+        <span class="value" data-minutes>00</span>
+        <span class="label">Minutes</span>
+      </div>
+      <div class="field">
+        <span class="value" data-seconds>00</span>
+        <span class="label">Seconds</span>
       </div>
     </div>
-    <script type="module" src="./js/1-timer.js"></script>
+
+    <script type="module" src="./1-timer.js"></script>
   </body>
 </html>
