--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/1-timer.css" />
+    <link rel="stylesheet" href="https://thedigital.gov.ua/fonts" />
     <title>Timer</title>
     <link
       rel="stylesheet"
