--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -11,7 +11,7 @@
     <a href="./index.html" class="back">Back</a>
 
     <form class="form">
-      <label class="delay-label">
+      <label class="delay">
         Delay (ms)
         <input type="number" name="delay" class="delay" required />
       </label>
