--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -11,7 +11,7 @@
     <a href="./index.html" class="back">Back</a>
 
     <form class="form">
-      <label class="delay">
+      <label class="delay-label">
         Delay (ms)
         <input type="number" name="delay" class="delay" required />
       </label>
@@ -27,7 +27,7 @@
         </label>
       </fieldset>
 
-      <button type="submit" class="not-btn">Create notification</button>
+      <button type="submit" class="notif-btn">Create notification</button>
     </form>
 
     <script type="module" src="./js/2-snackbar.js"></script>
